--- a/app/actor/point-actor.css
+++ b/app/actor/point-actor.css
@@ -132,9 +132,17 @@
 }
 
 .actor-item.actor-bumper .sprite {
+	transition: transform 100ms ease-out;
 	background-image: url(/Sonic/score-orb.png);
 	width: 32px;
 	height: 32px;
+}
+
+.actor-item.actor-bumper.actor-bumper-active .sprite {
+	transition: transform 0ms;
+	transform: translate(-50%, calc(-100% - var(--hoverWidth))) scale(1.25) rotate(calc(-1rad * var(--display-angle))) !important;
+	transform-origin: 50% 50%;
+	background-position-x: -32px;
 }
 
 .actor-item.actor-explosion .sprite {
