--- a/app/actor/monitor.css
+++ b/app/actor/monitor.css
@@ -73,6 +73,7 @@
 	--screen-y: 1;
 }
 
+[data-monitor="life-robotnik"] .monitor-screen,
 [data-monitor="life-eggman"] .monitor-screen {
 	--screen-x: 3;
 	--screen-y: 1;
