physics, optimizations and ruins

--- a/app/actor/block.css
+++ b/app/actor/block.css
@@ -139,8 +139,7 @@
 }
 
 .actor-item.actor-block {
-	z-index: calc(-1 - var(--));
-	z-index: 10001;
+	z-index: var(--z);
 }
 
 .actor-item.actor-block .sprite.collapse {
