--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -43,6 +43,7 @@ section.filters {
 	image-rendering: high-quality;
 	image-rendering: crisp-edges;
 	image-rendering: pixelated;
+	backface-visibility: hidden;
 	width: calc(1px * calc(var(--width)  * var(--scale) ));
 	height: calc(1px * calc(var(--height)  * var(--scale) ));
 	transition: width var(--scale-transition), height var(--scale-transition);
@@ -290,6 +291,7 @@ section.filters {
 }
 
 .viewport-background > div {
+	backface-visibility: hidden;
 	background-repeat: no-repeat;
 	contain: strict;
 }
