--- a/app/actor/sonic.css
+++ b/app/actor/sonic.css
@@ -394,6 +394,16 @@
 	transform: none;
 }
 
+.actor-item.actor-sonic[data-animation="turning"] .sprite:after {
+	--sprite-offset-x: -256px;
+	--sprite-offset-y: -256px;
+	--animation-width: -64px;
+	--animation-steps: 4;
+
+	animation: sonic-animate steps(var(--animation-steps)) 288ms forwards infinite;
+}
+
+/*.actor-item.actor-sonic[data-animation] .sprite:after,*/
 .actor-item.actor-sonic[data-animation="skidding"] .sprite:after {
 	/*--sprite-offset-x: -0px;*/
 	/*--sprite-offset-y: -256px;*/
@@ -406,7 +416,17 @@
 	--sprite-offset-y: -256px;
 	--animation-width: -64px;
 	--animation-steps: 6;
+
 	animation: sonic-animate steps(var(--animation-steps)) 288ms forwards;
+}
+
+.actor-item.actor-sonic[data-falling=true][data-animation="skidding"] .sprite:after {
+	--sprite-offset-x: -128px;
+	--sprite-offset-y: -256px;
+	--animation-width: -64px;
+	--animation-steps: 2;
+
+	animation: sonic-animate steps(var(--animation-steps)) 320ms forwards infinite;
 }
 
 .actor-item.actor-sonic[data-animation="dead"] .sprite:after {
