--- a/app/actor/switch.css
+++ b/app/actor/switch.css
@@ -7,6 +7,7 @@
 	--sprite-offset-y: 0px;
 	background-position: var(--sprite-offset-x) var(--sprite-offset-y);
 	background-image: url(/Sonic/switch.png);
+	opacity:  var(--opacity);
 }
 
 .actor-item.actor-switch[data-active=true] .sprite {
